# ObligatorioPAV

./: .gitignore  README.md
DSS_y_Contratos/: AltaFuncion.drawio  ComentarPelicula.drawio  Contratos Crear Reserva.odt  Contratos EliminarPelicula.odt  Contratos Puntuar Peliculas.odt  PuntuarPelicula.drawio  VerComentariosYPuntajesDePeliculas.drawio  VerInfoPelicula.drawio  crearReserva.drawio  eliminarPeliculas.drawio  obligatorio3.odt  ~$ntratos EliminarPelicula.odt
Documentacion/DSS_y_Contratos/: Contratos Iniciar Sesion.odt  PuntuarPelicula.drawio  VerInfoPelicula.drawio  altaCineConMemoria.drawio  inicioSesion.drawio
Documentacion/Laboratorio4y5/: UML_lab5_p1.drawio
Laboratorio4y5/: Copy of IniciarSesion(2).drawio  Copy of IniciarSesion.drawio  Crear Reserva  Crear Reserva.drawio  Ver Info Pelicula.drawio  eliminarPelicula.drawio
Laboratorio6/Codigo/: CMakeLists.txt  Makefile  ManejadorCine.cpp  ManejadorPelicula.h  ManejadorUsuario.cpp  ManejadorUsuario.h  Puntaje.cpp  Puntaje.h  Sesion.cpp  Usuario.cpp  Usuario.h  main.cpp
Laboratorio6/Codigo/Clases/: Cine.cpp  Cine.h  Comentario.cpp  Comentario.h  Credito.cpp  Credito.h  CtrAltaCine.cpp  CtrAltaCine.h  CtrIniciarSesion.cpp  CtrIniciarSesion.h  Debito.cpp  Debito.h  Fabrica.cpp  Fabrica.h  Funcion.cpp  Funcion.h  IctrInicioSesion.h  Pelicula.cpp  Pelicula.h  Puntaje.cpp  Puntaje.h  Reloj.cpp  Reloj.h  Reserva.cpp  Reserva.h  Sala.cpp  Sala.h  Sesion.cpp  Sesion.h  TipoPago.h  Usuario.cpp  Usuario.h
Laboratorio6/Codigo/Controladores/: CtrAltaCine.cpp  CtrAltaCine.h  CtrAltaFuncion.cpp  CtrAltaFuncion.h  CtrCargarDatos.cpp  CtrCargarDatos.h  CtrComentarPelicula.cpp  CtrComentarPelicula.h  CtrCrearReserva.cpp  CtrCrearReserva.h  CtrEliminarPelicula.cpp  CtrEliminarPelicula.h  CtrHacerReserva.cpp  CtrHacerReserva.h  CtrIniciarSesion.cpp  CtrIniciarSesion.h  CtrPuntuarPelicula.cpp  CtrPuntuarPelicula.h  CtrReloj.cpp  CtrReloj.h  CtrReserva.cpp  CtrReserva.h  CtrVerComentarioYPuntaje.cpp  CtrVerComentarioYPuntaje.h  CtrVerinfoPelicula.cpp  CtrVerinfoPelicula.h
Laboratorio6/Codigo/Dtypes/: dtCine.cpp  dtCine.h  dtComentario.cpp  dtComentario.h  dtDireccion.cpp  dtDireccion.h  dtFecha.cpp  dtFecha.h  dtFuncion.cpp  dtFuncion.h  dtHora.cpp  dtHora.h  dtHorario.cpp  dtHorario.h  dtInfoPelicula.cpp  dtInfoPelicula.h  dtPelicula.cpp  dtPelicula.h  dtPeliculaCompleto.cpp  dtPeliculaCompleto.h  dtPuntaje.cpp  dtPuntaje.h  dtReloj.cpp  dtReloj.h  dtSala.cpp  dtSala.h  dtTarjetas.cpp  dtTarjetas.h
Laboratorio6/Codigo/Inrterfaces/: IctrAltaCine.h  IctrAltaFuncion.h  IctrCargaDatos.h  IctrComentarPelicula.h  IctrCrearReserva.h  IctrEliminarPelicula.h  IctrHacerReserva.h  IctrInicioSesion.h  IctrPuntuarPelicula.h  IctrReloj.h  IctrVerComentarioYPuntaje.h  IctrVerinfoPelicula.h
Laboratorio6/Codigo/Manejadores/: ManejadorCine.cpp  ManejadorCine.h  ManejadorCrearReserva.cpp  ManejadorCrearReserva.h  ManejadorFunciones.cpp  ManejadorFunciones.h  ManejadorPelicula.cpp  ManejadorPelicula.h  ManejadorSala.cpp  ManejadorSala.h  ManejadorUsuario.cpp  ManejadorUsuario.h
Laboratorio6/Codigo/UI/: ui.cpp  ui.h
