cmake_minimum_required(VERSION 3.12)
project(Codigo)

set(CMAKE_CXX_STANDARD 14)

include_directories(Clases)
include_directories(Controladores)
include_directories(Dtypes)
include_directories(Inrterfaces)
include_directories(Manejadores)
include_directories(UI)

add_executable(Codigo
        Clases/Cine.cpp
        Clases/Cine.h
        Clases/Comentario.cpp
        Clases/Comentario.h
        Clases/Credito.cpp
        Clases/Credito.h
        Clases/Debito.cpp
        Clases/Debito.h
        Clases/Fabrica.cpp
        Clases/Fabrica.h
        Clases/Funcion.cpp
        Clases/Funcion.h
        Clases/Pelicula.cpp
        Clases/Pelicula.h
        Clases/Puntaje.cpp
        Clases/Puntaje.h
        Clases/Reserva.cpp
        Clases/Reserva.h
        Clases/Sala.cpp
        Clases/Sala.h
        Clases/Sesion.cpp
        Clases/Sesion.h
        Clases/Usuario.cpp
        Clases/Usuario.h
        Controladores/CtrAltaCine.cpp
        Controladores/CtrAltaCine.h
        Controladores/CtrAltaFuncion.cpp
        Controladores/CtrAltaFuncion.h
        Controladores/CtrComentarPelicula.cpp
        Controladores/CtrComentarPelicula.h
        Controladores/CtrCrearReserva.cpp
        Controladores/CtrCrearReserva.h
        Controladores/CtrIniciarSesion.cpp
        Controladores/CtrIniciarSesion.h
        Controladores/CtrPuntuarPelicula.cpp
        Controladores/CtrPuntuarPelicula.h
        Dtypes/dtCine.cpp
        Dtypes/dtCine.h
        Dtypes/dtComentario.cpp
        Dtypes/dtComentario.h
        Dtypes/dtDireccion.cpp
        Dtypes/dtDireccion.h
        Dtypes/dtFecha.cpp
        Dtypes/dtFecha.h
        Dtypes/dtFuncion.cpp
        Dtypes/dtFuncion.h
        Dtypes/dtHorario.cpp
        Dtypes/dtHorario.h
        Dtypes/dtPelicula.cpp
        Dtypes/dtPelicula.h
        Dtypes/dtSala.cpp
        Dtypes/dtSala.h
        Inrterfaces/IctrAltaCine.h
        Inrterfaces/IctrAltaFuncion.h
        Inrterfaces/IctrComentarPelicula.h
        Inrterfaces/IctrCrearReserva.h
        Inrterfaces/IctrInicioSesion.h
        Inrterfaces/IctrPuntuarPelicula.h
        Manejadores/ManejadorCine.cpp
        Manejadores/ManejadorCine.h
        Manejadores/ManejadorPelicula.cpp
        Manejadores/ManejadorPelicula.h
        Manejadores/ManejadorUsuario.cpp
        Manejadores/ManejadorUsuario.h
        UI/ui.cpp
        UI/ui.h
        main.cpp Manejadores/ManejadorFunciones.cpp Manejadores/ManejadorFunciones.h Dtypes/dtInfoPelicula.cpp Dtypes/dtInfoPelicula.h Inrterfaces/IctrVerinfoPelicula.h Controladores/CtrVerinfoPelicula.cpp Controladores/CtrVerinfoPelicula.h Inrterfaces/IctrEliminarPelicula.h Controladores/CtrEliminarPelicula.cpp Controladores/CtrEliminarPelicula.h)
