cmake_minimum_required(VERSION 3.12.1)
project(Codigo)

set(CMAKE_CXX_STANDARD 14)

include_directories(Clases)
include_directories(Controladores)
include_directories(Dtypes)
include_directories(Inrterfaces)
include_directories(Manejadores)
include_directories(UI)

add_executable(Codigo
        Clases/Cine.cpp
        Clases/Cine.h
        Clases/Comentario.cpp
        Clases/Comentario.h
        Clases/Credito.cpp
        Clases/Credito.h
        Clases/Debito.cpp
        Clases/Debito.h
        Clases/Fabrica.cpp
        Clases/Fabrica.h
        Clases/Funcion.cpp
        Clases/Funcion.h
        Clases/Pelicula.cpp
        Clases/Pelicula.h
        Clases/Puntaje.cpp
        Clases/Puntaje.h
        Clases/Reserva.cpp
        Clases/Reserva.h
        Clases/Sala.cpp
        Clases/Sala.h
        Clases/Sesion.cpp
        Clases/Sesion.h
        Clases/Usuario.cpp
        Clases/Usuario.h
        Controladores/CtrAltaCine.cpp
        Controladores/CtrAltaCine.h
        Controladores/CtrAltaFuncion.cpp
        Controladores/CtrAltaFuncion.h
        Controladores/CtrComentarPelicula.cpp
        Controladores/CtrComentarPelicula.h
        Controladores/CtrCrearReserva.cpp
        Controladores/CtrCrearReserva.h
        Controladores/CtrIniciarSesion.cpp
        Controladores/CtrIniciarSesion.h
        Controladores/CtrPuntuarPelicula.cpp
        Controladores/CtrPuntuarPelicula.h
        Controladores/CtrVerComentarioYPuntaje.h
        Controladores/CtrVerComentarioYPuntaje.cpp
        Dtypes/dtCine.cpp
        Dtypes/dtCine.h
        Dtypes/dtComentario.cpp
        Dtypes/dtComentario.h
        Dtypes/dtDireccion.cpp
        Dtypes/dtDireccion.h
        Dtypes/dtFecha.cpp
        Dtypes/dtFecha.h
        Dtypes/dtFuncion.cpp
        Dtypes/dtFuncion.h
        Dtypes/dtHorario.cpp
        Dtypes/dtTarjetas.cpp
        Dtypes/dtTarjetas.h
        Dtypes/dtHorario.h
        Dtypes/dtInfoPelicula.cpp
        Dtypes/dtInfoPelicula.h
        Dtypes/dtPelicula.cpp
        Dtypes/dtPelicula.h
        Dtypes/dtSala.cpp
        Dtypes/dtSala.h
        Dtypes/dtPeliculaCompleto.h
        Dtypes/dtPeliculaCompleto.cpp
        Dtypes/dtPuntaje.h
        Dtypes/dtPuntaje.cpp
        Inrterfaces/IctrAltaCine.h
        Inrterfaces/IctrAltaFuncion.h
        Inrterfaces/IctrComentarPelicula.h
        Inrterfaces/IctrCrearReserva.h
        Inrterfaces/IctrInicioSesion.h
        Inrterfaces/IctrPuntuarPelicula.h
        Inrterfaces/IctrVerComentarioYPuntaje.h
        Manejadores/ManejadorCine.cpp
        Manejadores/ManejadorCine.h
        Manejadores/ManejadorFunciones.cpp
        Manejadores/ManejadorFunciones.h
        Manejadores/ManejadorPelicula.cpp
        Manejadores/ManejadorPelicula.h
        Manejadores/ManejadorUsuario.cpp
        Manejadores/ManejadorUsuario.h
        UI/ui.cpp
        UI/ui.h
        main.cpp Manejadores/ManejadorFunciones.cpp Manejadores/ManejadorFunciones.h Dtypes/dtInfoPelicula.cpp Dtypes/dtInfoPelicula.h Inrterfaces/IctrVerinfoPelicula.h Controladores/CtrVerinfoPelicula.cpp Controladores/CtrVerinfoPelicula.h Controladores/CtrEliminarPelicula.cpp Controladores/CtrEliminarPelicula.h Inrterfaces/IctrEliminarPelicula.h Manejadores/ManejadorCrearReserva.cpp Manejadores/ManejadorCrearReserva.h Controladores/CtrReloj.cpp Controladores/CtrReloj.h Clases/Reloj.cpp Clases/Reloj.h Inrterfaces/IctrReloj.h Dtypes/dtHora.cpp Dtypes/dtHora.h)