cmake_minimum_required(VERSION 3.12)
project(Codigo)

set(CMAKE_CXX_STANDARD 14)


add_executable(Codigo
        Clases/Cine.cpp
        Clases/Cine.h
        Clases/Comentario.cpp
        Clases/Comentario.h
        Clases/Credito.cpp
        Clases/Credito.h
        Clases/Debito.cpp
        Clases/Debito.h
        Clases/Fabrica.cpp
        Clases/Fabrica.h
        Clases/Funcion.cpp
        Clases/Funcion.h
        Clases/Pelicula.cpp
        Clases/Pelicula.h
        Clases/Puntaje.cpp
        Clases/Puntaje.h
        Clases/Reloj.cpp
        Clases/Reloj.h
        Clases/Reserva.cpp
        Clases/Reserva.h
        Clases/Sala.cpp
        Clases/Sala.h
        Clases/Sesion.cpp
        Clases/Sesion.h
        Clases/Usuario.cpp
        Clases/Usuario.h
        Controladores/CtrAltaCine.cpp
        Controladores/CtrAltaCine.h
        Controladores/CtrAltaFuncion.cpp
        Controladores/CtrAltaFuncion.h
        Controladores/CtrComentarPelicula.cpp
        Controladores/CtrComentarPelicula.h
        Controladores/CtrCrearReserva.cpp
        Controladores/CtrCrearReserva.h
        Controladores/CtrEliminarPelicula.cpp
        Controladores/CtrEliminarPelicula.h
        Controladores/CtrIniciarSesion.cpp
        Controladores/CtrIniciarSesion.h
        Controladores/CtrPuntuarPelicula.cpp
        Controladores/CtrPuntuarPelicula.h
        Controladores/CtrReloj.cpp
        Controladores/CtrReloj.h
        Controladores/CtrVerComentarioYPuntaje.cpp
        Controladores/CtrVerComentarioYPuntaje.h
        Controladores/CtrVerinfoPelicula.cpp
        Controladores/CtrVerinfoPelicula.h
        Controladores/CtrCargarDatos.cpp
        Controladores/CtrCargarDatos.h
        Dtypes/dtCine.cpp
        Dtypes/dtCine.h
        Dtypes/dtComentario.cpp
        Dtypes/dtComentario.h
        Dtypes/dtDireccion.cpp
        Dtypes/dtDireccion.h
        Dtypes/dtFecha.cpp
        Dtypes/dtFecha.h
        Dtypes/dtFuncion.cpp
        Dtypes/dtFuncion.h
        Dtypes/dtHora.cpp
        Dtypes/dtHora.h
        Dtypes/dtHorario.cpp
        Dtypes/dtHorario.h
        Dtypes/dtInfoPelicula.cpp
        Dtypes/dtInfoPelicula.h
        Dtypes/dtPelicula.cpp
        Dtypes/dtPelicula.h
        Dtypes/dtPeliculaCompleto.cpp
        Dtypes/dtPeliculaCompleto.h
        Dtypes/dtPuntaje.cpp
        Dtypes/dtPuntaje.h
        Dtypes/dtSala.cpp
        Dtypes/dtSala.h
        Dtypes/dtTarjetas.cpp
        Dtypes/dtTarjetas.h
        Inrterfaces/IctrAltaCine.h
        Inrterfaces/IctrAltaFuncion.h
        Inrterfaces/IctrComentarPelicula.h
        Inrterfaces/IctrCrearReserva.h
        Inrterfaces/IctrEliminarPelicula.h
        Inrterfaces/IctrInicioSesion.h
        Inrterfaces/IctrPuntuarPelicula.h
        Inrterfaces/IctrReloj.h
        Inrterfaces/IctrVerComentarioYPuntaje.h
        Inrterfaces/IctrVerinfoPelicula.h
        Manejadores/ManejadorCine.cpp
        Manejadores/ManejadorCine.h
        Manejadores/ManejadorCrearReserva.cpp
        Manejadores/ManejadorCrearReserva.h
        Manejadores/ManejadorFunciones.cpp
        Manejadores/ManejadorFunciones.h
        Manejadores/ManejadorPelicula.cpp
        Manejadores/ManejadorPelicula.h
        Manejadores/ManejadorUsuario.cpp
        Manejadores/ManejadorUsuario.h
        UI/ui.cpp
        UI/ui.h
        main.cpp Dtypes/dtReloj.cpp Dtypes/dtReloj.h)
